--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-Google Web App para cálculo do Imposto Especial
+Google Web App para calculo do Imposto Especial
 
 http://impostoespecial.appspot.com/
